tests/models/struct/unnamed/u8/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    u8
);
fn main() {}
